# Lol

./: .ghci  AllMain.hs  README.md  stack.yaml
alchemy/: Anaphora.hs  TSCore.hs  TSEx.hs  alchemy.cabal
alchemy/Crypto/Alchemy/: CTLang.hs  Common.hs  Depth.hs  EDSL.hs  Lam.hs  PTLang.hs
alchemy/Crypto/Alchemy/Interpreter/: CTEval.hs  DeepSeq.hs  DepthEvaluator.hs  DupCT.hs  DupPT.hs  DupRescale.hs  Duplicate.hs  ErrorCT.hs  EvalCT.hs  EvalPT.hs  Evaluator.hs  IR2CT.hs  PT2CT.hs  PT2IR.hs  PTEval.hs  ShowCT.hs  ShowIR.hs  ShowPT.hs
alchemy/Crypto/Alchemy/Language/: AddPT.hs  CT.hs  HomomTunnel.hs  IR.hs  Lam.hs  Lit.hs  ModSwPT.hs  MulPT.hs  PT.hs  TunnelPT.hs
alchemy/exec/: Main.hs
lol/: lol.cabal
lol-apps/: lol-apps.cabal
lol-apps/Crypto/Lol/Applications/: CCASecureEncryption.hs  HomomPRF.hs  KeyHomomorphicPRF.hs  SymmSHE.hs  Trapdoor.hs  TrapdoorGeneration.hs
lol-apps/Crypto/Lol/Applications/Benchmarks/: KHPRFBenches.hs  SHEBenches.hs
lol-apps/Crypto/Lol/Applications/Examples/: KHPRF.hs
lol-apps/Crypto/Lol/Applications/Tests/: KHPRFTests.hs  SHETests.hs
lol-cpp/: lol-cpp.cabal  makefile
lol-cpp/Crypto/Lol/Cyclotomic/Tensor/: CPP.hs
lol-cpp/Crypto/Lol/Cyclotomic/Tensor/CPP/: Backend.hs  Extension.hs  common.cpp  l.cpp  types.h
lol-repa/: lol-repa.cabal
lol-repa/Crypto/Lol/Cyclotomic/Tensor/: Repa.hs
lol-repa/Crypto/Lol/Cyclotomic/Tensor/Repa/: CRT.hs  Dec.hs  Extension.hs  GL.hs  RTCommon.hs
lol/Crypto/Lol/: CRTrans.hs  FactoredDefs.hs  Gadget.hs  Prelude.hs  Reflects.hs
lol/Crypto/Lol/Cyclotomic/: CRTSentinel.hs  Cyc.hs  Linear.hs  Tensor.hs  UCyc.hs
lol/Crypto/Lol/RLWE/: Continuous.hs  Discrete.hs
lol/Crypto/Lol/Tests/: TensorTests.hs
lol/Crypto/Lol/Types/: FiniteField.hs  IZipVector.hs  IrreducibleChar2.hs  ZmStar.hs
lol/Crypto/Lol/Types/Unsafe/: RRq.hs  ZqBasic.hs
lol/Crypto/Lol/Utils/: PrettyPrint.hs  ShowType.hs
