name:                alchemy
version:             0.1.0.0
synopsis:            A Language and Compiler for Homomorphic Encryption Made easY
homepage:            https://github.com/cpeikert/Lol
license:             GPL-2
license-file:        LICENSE
author:              Eric Crockett <ecrockett0@gmail.com>, Chris Peikert <cpeikert@alum.mit.edu>
maintainer:          Eric Crockett <ecrockett0@gmail.com>
copyright:           Eric Crockett, Chris Peikert
category:            Crypto
stability:           experimental
build-type:          Simple
extra-source-files:  README, CHANGES.md
cabal-version:       >=1.10
description:
        TODO

source-repository head
  type:     git
  location: https://github.com/cpeikert/Lol

library
  build-depends:       base >= 4.7 && < 5
                     , constraints
                     , lol >= 0.5
                     , lol-apps >= 0.1
                     , numeric-prelude
                     , singletons
                     , type-natural
  default-language:    Haskell2010
  exposed-modules:     Crypto.Alchemy.EDSL
                       Crypto.Alchemy.Common
                       Crypto.Alchemy.Language.AddPT
                       Crypto.Alchemy.Language.CT
                       Crypto.Alchemy.Language.Lam
                       Crypto.Alchemy.Language.Lit
                       Crypto.Alchemy.Language.MulPT
                       Crypto.Alchemy.Language.TunnelPT
                       Crypto.Alchemy.Interpreter.CTEval
                       Crypto.Alchemy.Interpreter.PT2CT
                       Crypto.Alchemy.Interpreter.PTEval
                       Crypto.Alchemy.Interpreter.ShowCT
                       Crypto.Alchemy.Interpreter.ShowPT

-- test-suite alchemy-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , alchemy
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

